--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,14 +1,71 @@
 body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-      'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-      sans-serif;
+        'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+        sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-  }
-  
-  code {
+}
+
+code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-      monospace;
-  }
-  
+        monospace;
+}
+
+
+.nav-bar {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+
+
+    background-color: #FEBF30;
+    width: 100%;
+    height: 15vh;
+
+    @media (min-width: 600px) {
+        height: 20vh;
+    }
+
+    @media (min-width: 1000px) {}
+}
+
+.hamburger-button {
+	background-color: transparent;
+	color: inherit;
+    width: fit-content;
+	border: 0;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+}
+
+.hamburger {
+    // width: 50px;
+    height: fit-content;
+    margin-right: 15px;
+}
+
+.hamburger-block {
+    border-top: 1px solid black;
+    width: 30px;
+    height: 10px;
+}
+
+.nav-logo {
+    height: 100%;
+}
+
+.modal-nav{
+    height: 100%;
+    width: 300px;
+    background: white;
+
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    top: 0%;
+    right: 0%;
+}
