--- a/src/styles.scss
+++ b/src/styles.scss
@@ -68,6 +68,10 @@ code {
     font: inherit;
     cursor: pointer;
     outline: inherit;
+
+    @media (min-width: 1000px) {
+        display: none;
+    }
 }
 
 .hamburger {
@@ -148,7 +152,7 @@ code {
 
 }
 
-.nav-link {
+.side-menu-nav-link {
 
     background-color: transparent;
     width: fit-content;
@@ -168,7 +172,35 @@ code {
     }
 }
 
-.nav-link-active{
+.side-menu-nav-link-active{
         color: #1A459D;
         text-decoration: underline;
+}
+.nav-link-container {
+    display: flex;
+    flex-direction: row;
+    // width: 100%;
+    justify-content: space-evenly;
+}
+
+.nav-link {
+
+    color: #008DD1;
+    font-size: 24px;
+    margin-right: 30px;
+    text-decoration: none;
+
+    &:hover {
+        color: #1A459D;
+        text-decoration: underline;
+    }
+
+    @media (max-width: 1000px) {
+        display: none;
+    }
+}
+
+.nav-link-active {
+    color: #1A459D;
+    text-decoration: underline;
 }
