--- a/src/styles.scss
+++ b/src/styles.scss
@@ -204,3 +204,82 @@ code {
     color: #1A459D;
     text-decoration: underline;
 }
+
+.carousel-image{
+    height: 290px;
+    width: 100vw;
+}
+
+.carousel-container {
+    position: relative;
+    max-width: 100%;
+    overflow: hidden;
+  }
+  
+  .carousel-slide {
+    display: flex;
+    transition: transform 0.5s ease-in-out;
+  }
+  
+  .carousel-image {
+    width: 100%;
+    object-fit: cover;
+    height: 100%;
+  }
+  
+  .carousel-button {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    border: none;
+    padding: 16px;
+    cursor: pointer;
+    font-size: 24px;
+    z-index: 100;
+  }
+  
+  .prev {
+    left: 10px;
+  }
+  
+  .next {
+    right: 10px;
+  }
+  
+  /* Optional: styling for when you hover on buttons */
+  .carousel-button:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+  }
+
+.footer-container{
+    height: 170px;
+    width: 100vw;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    font-size: 10px;
+
+}
+
+.nav-logo-footer {
+    position: absolute;
+    right: 0;
+    width: 20vw;
+
+    // @media (max-width: 1000px) {
+    //     // position: relative;
+    //     // height: 80px;
+
+    // }
+
+    @media (max-width: 600px) {
+        height: 80px;
+        position: relative;
+
+    }
+    align-self: right;
+}
+
