--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,7 @@
+$blue: #2519D2;
+$yellow: #FFAB00;
+$nav-logo-width: 200px;
+
 body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -40,23 +44,28 @@ code {
     }
 }
 
+.add-margin-for-nav-bar {
+    margin-top: 70px;
+}
+
 
 .nav-bar {
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1;
 
+    // position: -webkit-sticky;
+    // position: sticky;
+    // top: 0;
 
-    background-color: #FEBF30;
+    background-color: $blue;
     width: 100%;
-    height: 15vh;
-
-    @media (min-width: 600px) {
-        height: 20vh;
-    }
-
-    @media (min-width: 1000px) {}
+    height: 70px;
 }
 
 .hamburger-button {
@@ -68,6 +77,9 @@ code {
     font: inherit;
     cursor: pointer;
     outline: inherit;
+    margin-left: 20px;
+    position: fixed;
+    left: 0;
 
     @media (min-width: 1000px) {
         display: none;
@@ -81,24 +93,41 @@ code {
 }
 
 .hamburger-block {
-    border-top: 1px solid black;
+    border-top: 2px solid white;
     width: 30px;
-    height: 10px;
+    height: 5px;
+}
+
+.nav-logo-container{
+    display: flex;
+    position: fixed;
+    left: 0;
+
+    align-self: center;
+    justify-self: center;
+
+    @media (max-width: 1000px) {
+        left: calc(50% - .5*$nav-logo-width);
+    }
+
+    @media (max-width: 350px) {
+        display: none;
+    }
 }
 
 .nav-logo {
-    height: 100%;
+    width: $nav-logo-width;
 }
 
 .modal-nav {
     height: 100%;
-    width: 40vw;
+    width: 100vw;
 
     @media (max-width: 600px) {
         width: 100dvw;
     }
 
-    background: white;
+    background: $yellow;
 
     position: absolute;
     display: flex;
@@ -140,7 +169,7 @@ code {
     right: 0;
     content: "\d7";
     font-size: 40px;
-    // color: #FFF;
+    color: #FFF;
     line-height: 100px;
     text-align: center;
 }
@@ -159,39 +188,51 @@ code {
     border: 0;
     padding: 0;
     font: inherit;
+    font-family: "Union Gothic";
     cursor: pointer;
     outline: inherit;
 
-    color: #008DD1;
-    font-size: 24px;
+    color: $blue;
+    font-size: 36px;
     margin-bottom: 15px;
+    letter-spacing: 2px;
+    font-weight: 700;
+
+    @media (max-width: 1000px) {
+        font-size: 30px;
+    }
 
     &:hover {
-        color: #1A459D;
-        text-decoration: underline;
+        color: white;
     }
 }
 
 .side-menu-nav-link-active{
-        color: #1A459D;
-        text-decoration: underline;
+        // color: $blue;
+        // text-decoration: underline;
 }
 .nav-link-container {
     display: flex;
     flex-direction: row;
-    // width: 100%;
-    justify-content: space-evenly;
+    width: 100%;
+    justify-self: right !important;
+    align-self: right !important;
+    justify-content: right;
 }
 
 .nav-link {
 
-    color: #008DD1;
-    font-size: 24px;
+    color: white;
+    font-size: 14px;
     margin-right: 30px;
     text-decoration: none;
+    font-family: "Union Gothic";
+    letter-spacing: 2px;
+    font-weight: 700;
+    text-transform: uppercase;
 
     &:hover {
-        color: #1A459D;
+        color: $yellow;
         text-decoration: underline;
     }
 
@@ -201,8 +242,7 @@ code {
 }
 
 .nav-link-active {
-    color: #1A459D;
-    text-decoration: underline;
+    color: $yellow;
 }
 
 .carousel-image{
