--- a/src/styles.scss
+++ b/src/styles.scss
@@ -375,3 +375,51 @@ code {
     width: 625px;
     border: 1px solid $yellow;
 }
+
+.input-element-container{
+    display: flex;
+    flex-direction: column;
+    margin: 10px 20px;
+
+}
+
+.input-element{
+    border: 1px solid #999999;
+
+}
+
+.input-label{
+    color: #2519D2;
+    font-size: 17px;
+    font-family: sans-serif;
+    font-weight: bold;
+    margin-bottom: 5px;
+
+}
+
+.form-error{
+    // color: #EB6864;
+    color: #EC6864;
+}
+
+.volunteer-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 2px solid brown;
+
+}
+
+.volunteer-title{
+    font-family: unionGothic;
+    font-size: 40px;
+    color: $blue;
+    width: 625px;
+    text-align: center;
+}
+
+.volunteer-text{
+    width: 625px;
+    text-align: center;
+    margin: 0px 0px 20px 0px;
+}
