--- a/src/styles.scss
+++ b/src/styles.scss
@@ -360,9 +360,33 @@ code {
 
 .about-section-one-image {
     height: 600px;
-
+    background-color: $american-blue;
+    border-radius: 25px;
+    margin: 10px 10px;
+    border: 1px solid $yellow;
+    box-shadow:
+      1px 2px 2px hsl(220deg 60% 50% / 0.2),
+      2px 4px 4px hsl(220deg 60% 50% / 0.2),
+      4px 8px 8px hsl(220deg 60% 50% / 0.2),
+      8px 16px 16px hsl(220deg 60% 50% / 0.2),
+      16px 32px 32px hsl(220deg 60% 50% / 0.2);
+  
     @media (min-width: 1000px) {}
 }
+
+  .traditional.box {
+    box-shadow:
+      0 6px 6px hsl(0deg 0% 0% / 0.3);
+  }
+  .layered.box {
+    box-shadow:
+      0 1px 1px hsl(0deg 0% 0% / 0.075),
+      0 2px 2px hsl(0deg 0% 0% / 0.075),
+      0 4px 4px hsl(0deg 0% 0% / 0.075),
+      0 8px 8px hsl(0deg 0% 0% / 0.075),
+      0 16px 16px hsl(0deg 0% 0% / 0.075)
+    ;
+  }
 
 .about-section-one-text {
     font-size: 30px;
