--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,8 @@ $american-blue: #0157ae;
 $american-red:  #d42729;
 $dark-gray: #12110B;
 
+$general-font: "roboto";
+
 body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -194,7 +196,7 @@ code {
     border: 0;
     padding: 0;
     font: inherit;
-    font-family: unionGothic;
+    font-family: $general-font;
     cursor: pointer;
     outline: inherit;
 
@@ -233,7 +235,7 @@ code {
     font-size: 14px;
     margin-right: 30px;
     text-decoration: none;
-    font-family: unionGothic;
+    font-family: $general-font;
     letter-spacing: 2px;
     font-weight: 700;
     text-transform: uppercase;
@@ -392,7 +394,7 @@ code {
     font-size: 30px;
     margin: 0px 0px 0px 50px;
 
-    font-family: unionGothic;
+    font-family: $general-font;
 
     @media (min-width: 1000px) {
         font-size: 50px;
@@ -430,7 +432,8 @@ code {
 .input-label {
     color: #2519D2;
     font-size: 17px;
-    font-family: sans-serif;
+    // font-family: sans-serif;
+    font-family: $general-font;
     font-weight: bold;
     margin-bottom: 5px;
 
@@ -450,7 +453,7 @@ code {
 }
 
 .volunteer-title {
-    font-family: unionGothic;
+    font-family: $general-font;
     font-size: 40px;
     color: $american-blue;
     width: 625px;
