--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,7 +6,14 @@ $american-blue: #0157ae;
 $american-red:  #d42729;
 $dark-gray: #12110B;
 
-$general-font: "roboto";
+// $general-font: "Roboto";
+// $general-font: "Times New Roman";
+$general-font: 'Roboto', sans-serif;
+
+
+$light-blue:	#F5FBFF;
+$darker-light-blue:	#DCEEFF;
+
 
 body {
     margin: 0;
@@ -341,6 +348,7 @@ code {
     align-items: center;
     justify-content: center;
     height: fit-content;
+    background-color: $light-blue;
 
 
     @media (min-width: 1000px) {
@@ -362,16 +370,16 @@ code {
 
 .about-section-one-image {
     height: 600px;
-    background-color: $american-blue;
-    border-radius: 25px;
+    // background-color: $american-blue;
+    // border-radius: 25px;
     margin: 10px 10px;
-    border: 1px solid $yellow;
-    box-shadow:
-      1px 2px 2px hsl(220deg 60% 50% / 0.2),
-      2px 4px 4px hsl(220deg 60% 50% / 0.2),
-      4px 8px 8px hsl(220deg 60% 50% / 0.2),
-      8px 16px 16px hsl(220deg 60% 50% / 0.2),
-      16px 32px 32px hsl(220deg 60% 50% / 0.2);
+    // border: 1px solid $yellow;
+    // box-shadow:
+    //   1px 2px 2px hsl(220deg 60% 50% / 0.2),
+    //   2px 4px 4px hsl(220deg 60% 50% / 0.2),
+    //   4px 8px 8px hsl(220deg 60% 50% / 0.2),
+    //   8px 16px 16px hsl(220deg 60% 50% / 0.2),
+    //   16px 32px 32px hsl(220deg 60% 50% / 0.2);
   
     @media (min-width: 1000px) {}
 }
@@ -395,7 +403,6 @@ code {
     margin: 0px 0px 0px 50px;
 
     font-family: $general-font;
-
     @media (min-width: 1000px) {
         font-size: 50px;
     }
@@ -501,6 +508,11 @@ code {
     display: flex;
     flex-direction: column;
     width: 100%;
+    font-family: $general-font;
+}
+
+.panel-two{
+    background-color: $light-blue;
 }
 
 .inner-panel{
@@ -514,8 +526,6 @@ code {
     margin: 40px 40px;
     font-weight: bold;
     text-transform: capitalize;
-
-
 }
 
 .panel-text{
