--- a/src/styles.scss
+++ b/src/styles.scss
@@ -560,3 +560,8 @@ code {
 .subscribe-option-input {
     margin-left: 20px;
 }
+
+.amount-buttons{
+    display: flex;
+    flex-direction: row;
+}
