donate form logic

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,6 +14,15 @@ $general-font: 'Roboto', sans-serif;
 $light-blue: #F5FBFF;
 $darker-light-blue: #DCEEFF;
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+input[type=number] {
+    -moz-appearance: textfield;
+}
 
 body {
     margin: 0;
@@ -587,7 +596,7 @@ code {
     }
 }
 
-.custom-amount-button-container{
+.custom-amount-button-container {
     height: 95px;
     display: flex;
     align-items: center;
@@ -612,4 +621,9 @@ code {
 
 .amount-button-selected {
     background-color: $yellow;
+}
+
+.custom-amounts-and-error {
+    display: flex;
+    flex-direction: column;
 }
