--- a/src/styles.scss
+++ b/src/styles.scss
@@ -322,7 +322,6 @@ code {
 
 .footer-container {
     height: 170px;
-    width: 100vw;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -669,11 +668,19 @@ code {
     display: flex;
     flex-direction: column;
     margin: 100px 20px;
+
+    @media (max-width: 1000px) {
+        margin: 30px 10px;
+    }
 }
 
 .sign-up-form-container {
     display: flex;
     flex-direction: column;
     margin: 100px 20px;
+
+    @media (max-width: 1000px) {
+        margin: 30px 10px;
+    }
 
 }
