--- a/src/styles.scss
+++ b/src/styles.scss
@@ -146,14 +146,14 @@ code {
 }
 
 .modal-nav {
-    height: 100%;
+    height: 100vh;
     width: 100vw;
 
     @media (max-width: 600px) {
-        width: 100dvw;
+        width: 100vw;
     }
 
-    background: $yellow;
+    background: $american-blue;
 
     position: absolute;
     display: flex;
@@ -161,11 +161,16 @@ code {
     justify-content: center;
     align-items: center;
     top: 0%;
-    right: 0%;
+    // right: 0%;
 
+}
 
-
-
+.modal-nav-inner {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .undo-button-styles {
@@ -218,7 +223,7 @@ code {
     cursor: pointer;
     outline: inherit;
 
-    color: $american-blue;
+    color: white;
     font-size: 36px;
     margin-bottom: 15px;
     letter-spacing: 2px;
@@ -327,9 +332,14 @@ code {
     justify-content: center;
     align-items: center;
     font-size: 10px;
-    background-color: $dark-gray;
+    background-color: gray;
     color: white;
+  box-shadow: 0 -5px 10px rgba(0, 0, 0, 0.2);
+}
 
+.footer-text{
+    font-size: 12px;
+    margin: 0px 10px;
 }
 
 .nav-logo-footer {
@@ -359,19 +369,14 @@ code {
     justify-content: center;
     height: fit-content;
     background-color: $light-blue;
+    padding: 100px 0px 0px 0px;
+
 
     @media (min-width: 1000px) {
         flex-direction: row;
         height: 600px;
+            // font-size: 1px;
     }
-
-}
-
-.about-section-one-inner {
-    margin: 0px 40px;
-    width: 100%;
-    height: fit-content;
-    border: 1px solid black;
 }
 
 .half-section {
@@ -445,6 +450,8 @@ code {
     &:focus {
         background-color: white;
     }
+
+    max-width: 90vw;
 
 }
 
@@ -564,7 +571,6 @@ code {
     background: white;
     display: flex;
     flex-direction: column;
-    width: 100%;
     font-family: $general-font;
 }
 
@@ -670,7 +676,7 @@ code {
     margin: 100px 20px;
 
     @media (max-width: 1000px) {
-        margin: 30px 10px;
+        margin: 100px 10px;
     }
 }
 
