--- a/src/styles.scss
+++ b/src/styles.scss
@@ -528,12 +528,15 @@ code {
     color: $american-blue;
     width: 625px;
     text-align: center;
+    max-width: 90vw;
+    font-weight: 700;
 }
 
 .volunteer-text {
     width: 625px;
     text-align: center;
     margin: 0px 0px 20px 0px;
+    max-width: 90vw;
 }
 
 .submit-volunteer {
@@ -722,10 +725,9 @@ code {
     font-family: $general-font;
     font-size: 40px;
     color: $american-blue;
-    width: 625px;
     margin-top: 30px;
     text-align: center;
+    font-weight: 700;
 
-    @media (max-width: 1000px) {
-    }
+    max-width: 90vw;
 }
