--- a/src/styles.scss
+++ b/src/styles.scss
@@ -735,3 +735,19 @@ code {
 
     max-width: 90vw;
 }
+
+.spinner {
+    margin-top: 40px;
+  width: 48px;
+  height: 48px;
+  border: 5px solid #ccc;
+  border-top-color: #333;
+  border-radius: 50%;
+  animation: spin 0.8s linear infinite;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
