--- a/src/styles.scss
+++ b/src/styles.scss
@@ -737,7 +737,7 @@ code {
 }
 
 .spinner {
-    margin-top: 40px;
+  margin: 40px 0px 40px;
   width: 48px;
   height: 48px;
   border: 5px solid #ccc;
@@ -750,4 +750,56 @@ code {
   to {
     transform: rotate(360deg);
   }
+}
+
+.error-container {
+    display: flex;
+    flex-direction: column;
+    background-color: pink;
+    // width: 300px;
+    padding: 20px 20px;
+    justify-content: center;
+    // align-items: center;
+    border-radius: 10px;
+    margin: 40px 0px 40px;
+}
+
+.error-text{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.back-button{
+    background-color: white;
+    color: inherit;
+    width: fit-content;
+    border-radius: 3px;
+    border: 1px solid lightgray;
+
+    // border: 0;
+    // padding: 0;
+    font: inherit;
+    cursor: pointer;
+    outline: inherit;
+    margin-bottom: 20px;
+
+
+    &:hover {
+        background-color: lightgray;
+    }
+
+}
+
+.success-container {
+    display: flex;
+    flex-direction: column;
+    background-color: lightgreen;
+    // width: 300px;
+    padding: 20px 20px;
+    justify-content: center;
+    // align-items: center;
+    border-radius: 10px;
+    margin: 40px 0px 40px;
+    font-size: 18px;
 }
