--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,6 +8,13 @@ $dark-gray: #12110B;
 $green: #2EB24B;
 $money-green: #85bb65;
 
+$red-one: #f43b1d;
+$blue-one: #29a6f3;
+$blue-two: #2b388f;
+$blue-three: #001958;
+$beige: #efebe5;
+
+
 // $general-font: "Roboto";
 // $general-font: "Times New Roman";
 $general-font: 'Roboto', sans-serif;
@@ -98,7 +105,7 @@ code {
     // position: sticky;
     // top: 0;
 
-    background-color: $american-blue;
+    background-color: $blue-three;
     width: 100%;
     height: 70px;
 }
@@ -131,12 +138,13 @@ code {
     border-top: 2px solid white;
     width: 30px;
     height: 5px;
+
 }
 
 .nav-logo-container {
     display: flex;
     position: fixed;
-    left: 0;
+    left: 10px;
 
     align-self: center;
     justify-self: center;
@@ -162,7 +170,7 @@ code {
         width: 100vw;
     }
 
-    background: $american-blue;
+    background: $blue-three;
 
     position: absolute;
     display: flex;
@@ -243,7 +251,7 @@ code {
     }
 
     &:hover {
-        color: white;
+        color: $yellow;
     }
 }
 
