--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,19 +12,23 @@ $red-one: #f43b1d;
 $blue-one: #29a6f3;
 $blue-two: #2b388f;
 $blue-three: #001958;
+$blue-four: #003585;
 $beige: #efebe5;
 
-
-// $general-font: "Roboto";
-// $general-font: "Times New Roman";
 $general-font: 'Roboto', sans-serif;
-
 
 $light-blue: #F5FBFF;
 $darker-light-blue: #DCEEFF;
 
 $input-width-large: 580px;
 $input-width-small: 500px;
+
+$elect-cta-height: 20px;
+$nav-height: 70px;
+
+$font-1: anton regular;
+$font-2: source serif;
+$font-3: source sans;
 
 
 input::-webkit-outer-spin-button,
@@ -80,18 +84,22 @@ code {
 }
 
 .add-margin-for-nav-bar {
-    margin-top: 70px;
+    margin-top: $nav-height + $elect-cta-height;
 }
 
 .nav-bar-empty {
     width: 100%;
-    height: 70px;
+    height: $nav-height + $elect-cta-height;
+}
+
+.blue-background {
+    background-color: $blue-four;
 }
 
 
 .nav-bar {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     position: fixed;
@@ -100,14 +108,31 @@ code {
     z-index: 1;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.5), 0 4px 8px rgba(0, 0, 0, 0.3);
 
-
-    // position: -webkit-sticky;
-    // position: sticky;
-    // top: 0;
-
-    background-color: $blue-three;
+    background-color: $blue-four;
     width: 100%;
-    height: 70px;
+    height: $elect-cta-height + $nav-height;
+}
+
+.nav-bar-inner {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+
+    background-color: $blue-four;
+    width: 100%;
+    height: $nav-height;
+}
+
+.election-cta {
+    background-color: $red-one;
+    height: $elect-cta-height;
+    width: 100vw;
+    text-transform: uppercase;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    font-weight: 700;
 }
 
 .hamburger-button {
@@ -745,19 +770,19 @@ code {
 }
 
 .spinner {
-  margin: 40px 0px 40px;
-  width: 48px;
-  height: 48px;
-  border: 5px solid #ccc;
-  border-top-color: #333;
-  border-radius: 50%;
-  animation: spin 0.8s linear infinite;
+    margin: 40px 0px 40px;
+    width: 48px;
+    height: 48px;
+    border: 5px solid #ccc;
+    border-top-color: #333;
+    border-radius: 50%;
+    animation: spin 0.8s linear infinite;
 }
 
 @keyframes spin {
-  to {
-    transform: rotate(360deg);
-  }
+    to {
+        transform: rotate(360deg);
+    }
 }
 
 .error-container {
@@ -772,13 +797,13 @@ code {
     margin: 40px 0px 40px;
 }
 
-.error-text{
+.error-text {
     display: flex;
     flex-direction: row;
     justify-content: center;
 }
 
-.back-button{
+.back-button {
     background-color: white;
     color: inherit;
     width: fit-content;
@@ -810,4 +835,46 @@ code {
     border-radius: 10px;
     margin: 40px 0px 40px;
     font-size: 18px;
+}
+
+.hero-container {
+    width: 100vw;
+    height: 450px;
+    background-color: $blue-four;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    position: relative;
+}
+
+.red-name {
+    color: $red-one;
+    font-size: 36px;
+    font-family: font-1;
+}
+
+.for {
+    color: white;
+    font-family: font-3;
+}
+
+.hero-row-one {
+    display: flex;
+    flex-direction: row;
+}
+
+.hero-image {
+    display: flex;
+    height: 400px;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    // @media (max-width: 1500px) {
+    // height: 400px;
+    // }
+    @media (max-width: 800px) {
+        display: none;
+    }
 }
