--- a/src/styles.scss
+++ b/src/styles.scss
@@ -556,8 +556,13 @@ code {
 .volunteer-container {
     display: flex;
     flex-direction: column;
-    margin: 100px 20px;
+    margin: 150px 20px;
     align-items: center;
+
+
+    @media (max-width: 500px) {
+        margin: 120px 20px;
+    }
 }
 
 .volunteer-title {
@@ -855,6 +860,10 @@ code {
     flex-direction: column;
     align-items: center;
 
+    @media (max-width: 500px) {
+        height: 350px;
+    }
+
 }
 
 .red-name {
@@ -862,6 +871,10 @@ code {
     font-size: 54px;
     font-family: font-1;
     font-weight: 700;
+
+    @media (max-width: 500px) {
+        font-size: 36px;
+    }
 }
 
 .for {
@@ -873,6 +886,10 @@ code {
     align-items: center;
     padding: 0px 10px;
     font-size: 24px;
+
+    @media (max-width: 500px) {
+        font-size: 18px;
+    }
 
 }
 
@@ -888,6 +905,10 @@ code {
     font-family: font-3;
     font-size: 24px;
 
+    @media (max-width: 500px) {
+        font-size: 18px;
+    }
+
 
 }
 
@@ -899,6 +920,10 @@ code {
     font-weight: 700;
     font-family: font-3;
 
+    @media (max-width: 500px) {
+        font-size: 18px;
+    }
+
 }
 
 .hero-name{
@@ -907,6 +932,10 @@ code {
     font-size: 24px;
     font-weight: 700;
     font-family: font-3;
+
+    @media (max-width: 500px) {
+        font-size: 18px;
+    }
 }
 
 .hero-image {
